--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,16 @@
     <title>Beats Music</title>
     <style type="text/css">
       * { margin: 0px; padding: 0px; }
-      webview { width: 100%; height: 100%; border: none; }
+      webview { width: 100%; height: 600px; border: none; }
+      #btnBar { min-height: 15px; background: black; color: white; font-size: 12px; padding: 10px; border-top: 1px solid #333; }
+      #btnBar a { padding: 3px 10px 3px 10px; background: #ccc; border-radius: 10px; text-decoration: none; color: black; font-weight: bold; margin-right: 10px; }
     </style>
     <script type="text/javascript" src="/index.js"></script>
   </head>
   <body>
-    <webview id="frame" src="https://listen.beatsmusic.com/" width="860" height="630"></webview>
+    <webview id="frame" src="https://listen.beatsmusic.com/" style="width: 860px; height: 600px;"></webview>
+    <div id="btnBar">
+      <a href="#" id="backBtn">Back</a> <a href="#" id="forwardBtn">Forward</a>
+    </div>
   </body>
 </html>
