master: Minor style tweaks.

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,10 @@
     <title>Beats Music</title>
     <style type="text/css">
       * { margin: 0px; padding: 0px; }
+      body { font-family: Helvetica Neue, Helvetica, sans-serif; }
       webview { width: 100%; height: 600px; border: none; }
       #btnBar { min-height: 15px; background: black; color: white; font-size: 12px; padding: 10px; border-top: 1px solid #333; }
-      #btnBar a { padding: 3px 10px 3px 10px; background: #ccc; border-radius: 10px; text-decoration: none; color: black; font-weight: bold; margin-right: 10px; }
+      #btnBar a { padding: 3px 10px 3px 10px; background: #fff; border-radius: 10px; text-decoration: none; color: black; font-weight: bold; margin-right: 10px; }
     </style>
     <script type="text/javascript" src="/index.js"></script>
   </head>
