--- a/src/index.html
+++ b/src/index.html
@@ -7,12 +7,18 @@
       webview { width: 100%; height: 600px; border: none; }
       #btnBar { min-height: 15px; background: black; color: white; font-size: 12px; padding: 10px; border-top: 1px solid #333; }
       #btnBar a { padding: 3px 10px 3px 10px; background: #fff; border-radius: 10px; text-decoration: none; color: black; font-weight: bold; margin-right: 10px; }
+      #btnBar .ad { float: right;}
+      #btnBar .ad a { background: white; color: #1111CC; text-decoration: underline; }
     </style>
     <script type="text/javascript" src="/index.js"></script>
   </head>
   <body>
     <webview id="frame" src="https://listen.beatsmusic.com/" style="width: 860px; height: 600px;"></webview>
     <div id="btnBar">
+      <div class="ad">
+        <a href="http://goo.gl/yyLxOY" target="new">Like Android Wear? What about farts? Get the Remote Whoopee Cushion!</a>
+      </div>
+
       <a href="#" id="backBtn">Back</a> <a href="#" id="forwardBtn">Forward</a>
     </div>
   </body>
