master: Added more ads for a rotation.

--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
   <body>
     <webview id="frame" src="https://listen.beatsmusic.com/" style="width: 860px; height: 600px;"></webview>
     <div id="btnBar">
-      <div class="ad">
+      <div id="ad" class="ad">
         <a href="http://goo.gl/yyLxOY" target="new">Like Android Wear? What about farts? Get the Remote Whoopee Cushion!</a>
       </div>
 
